--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* 
+  このファイルは、将来的に特定のグローバルスタイルが必要になった場合のために残しますが、
+  基本的なスタイルは `src/styles/common.css` で管理されます。
+*/
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
